[gd_scene load_steps=87 format=3 uid="uid://bkjwkha037wlj"]

[ext_resource type="Script" uid="uid://bgb8bkundcsws" path="res://tutorial stages/exp_tutorial.gd" id="1_pr8p3"]
[ext_resource type="Texture2D" uid="uid://dox6s2pdaah6p" path="res://asset/art/Gray.png" id="2_pnqj1"]
[ext_resource type="Texture2D" uid="uid://dmuv0mjmg6ihf" path="res://asset/art/pxArt.png" id="3_r28i6"]
[ext_resource type="Texture2D" uid="uid://b2capxdpvd4vu" path="res://asset/UI/Transparent.png" id="4_uaeq4"]
[ext_resource type="Texture2D" uid="uid://dstay5bnukli8" path="res://asset/art/256x256 Pixel Textures/256x256/256_Brick 01 Mud.png" id="5_3o53u"]
[ext_resource type="Texture2D" uid="uid://dwldsahsmum7d" path="res://asset/UI/1.png" id="5_r28i6"]
[ext_resource type="Texture2D" uid="uid://byifsb6867sav" path="res://asset/UI/2.png" id="6_3o53u"]
[ext_resource type="Texture2D" uid="uid://c8rseeirdyqfk" path="res://asset/UI/3.png" id="7_16dms"]
[ext_resource type="Texture2D" uid="uid://cu3m3ho7b3kno" path="res://asset/UI/4.png" id="8_jjqjp"]
[ext_resource type="Texture2D" uid="uid://mxvx0bwdcd3w" path="res://asset/UI/5.png" id="9_1h656"]
[ext_resource type="Texture2D" uid="uid://c5dw3ydc1s4yr" path="res://asset/UI/6.png" id="10_2g6yp"]
[ext_resource type="Texture2D" uid="uid://bffoin8e0nw4" path="res://asset/UI/7.png" id="11_ulwgd"]
[ext_resource type="Texture2D" uid="uid://b3hia88v6t47b" path="res://asset/UI/8.png" id="12_42r2d"]
[ext_resource type="Texture2D" uid="uid://d18k506xrmby4" path="res://asset/UI/9.png" id="13_7jfug"]
[ext_resource type="Texture2D" uid="uid://d1m1q7ev7ot2i" path="res://asset/UI/Clear.png" id="14_xiwxr"]
[ext_resource type="Texture2D" uid="uid://dxetc5bv3s2kd" path="res://asset/UI/0.png" id="15_t8f48"]
[ext_resource type="Texture2D" uid="uid://k0bwslbq0k4d" path="res://asset/UI/backspace.png" id="16_cwhjg"]
[ext_resource type="Texture2D" uid="uid://b5c62fsc3wbw4" path="res://asset/UI/Back.png" id="17_0rtjy"]
[ext_resource type="Texture2D" uid="uid://dawnge3ejgh62" path="res://asset/UI/pass.png" id="18_yaa4h"]
[ext_resource type="Texture2D" uid="uid://cyvlmlqo1o0cq" path="res://asset/enemy/Enemy2/Attack1.png" id="19_a46cv"]
[ext_resource type="Texture2D" uid="uid://c3inusvn4yt3w" path="res://asset/enemy/Enemy2/Hit.png" id="20_h640d"]
[ext_resource type="Texture2D" uid="uid://buacpjdw30mk8" path="res://asset/enemy/Enemy2/Death.png" id="21_16dms"]
[ext_resource type="Texture2D" uid="uid://bya3ju5v1bh6c" path="res://asset/enemy/Enemy2/Idle.png" id="21_e1b4u"]
[ext_resource type="Texture2D" uid="uid://dp3npaf6ouxyu" path="res://asset/Main Character/Crusader-4-Attacking.png" id="22_4wbwh"]
[ext_resource type="Texture2D" uid="uid://b2i5aosotcqv3" path="res://asset/Main Character/Crusader-4-Hurt.png" id="23_qv7a5"]
[ext_resource type="Texture2D" uid="uid://dth72kq0umw4l" path="res://asset/enemy/Enemy2/Run.png" id="24_jjqjp"]
[ext_resource type="Texture2D" uid="uid://msivu6nn77gg" path="res://asset/Main Character/Crusader-4-Idle.png" id="24_rw4tf"]
[ext_resource type="Texture2D" uid="uid://6fkjaxweqoi0" path="res://asset/Main Character/Crusader-4-Running.png" id="28_1h656"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oucyn"]
atlas = ExtResource("19_a46cv")
region = Rect2(0, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pfy2"]
atlas = ExtResource("19_a46cv")
region = Rect2(184, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf677"]
atlas = ExtResource("19_a46cv")
region = Rect2(368, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctvfa"]
atlas = ExtResource("19_a46cv")
region = Rect2(552, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw8se"]
atlas = ExtResource("21_16dms")
region = Rect2(0, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1r2p"]
atlas = ExtResource("21_16dms")
region = Rect2(184, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx35y"]
atlas = ExtResource("21_16dms")
region = Rect2(368, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g1px"]
atlas = ExtResource("21_16dms")
region = Rect2(552, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttut2"]
atlas = ExtResource("21_16dms")
region = Rect2(736, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6bfp"]
atlas = ExtResource("21_16dms")
region = Rect2(920, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pq8e"]
atlas = ExtResource("21_16dms")
region = Rect2(1104, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_whmfx"]
atlas = ExtResource("21_16dms")
region = Rect2(1288, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh6bs"]
atlas = ExtResource("21_16dms")
region = Rect2(1472, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_eardg"]
atlas = ExtResource("20_h640d")
region = Rect2(0, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qsgf"]
atlas = ExtResource("20_h640d")
region = Rect2(184, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij3pi"]
atlas = ExtResource("20_h640d")
region = Rect2(368, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr1xj"]
atlas = ExtResource("21_e1b4u")
region = Rect2(0, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7m3e"]
atlas = ExtResource("21_e1b4u")
region = Rect2(184, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4a0t"]
atlas = ExtResource("21_e1b4u")
region = Rect2(368, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjf25"]
atlas = ExtResource("21_e1b4u")
region = Rect2(552, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5weq"]
atlas = ExtResource("21_e1b4u")
region = Rect2(736, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwas3"]
atlas = ExtResource("21_e1b4u")
region = Rect2(920, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ihu"]
atlas = ExtResource("24_jjqjp")
region = Rect2(368, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6q4x"]
atlas = ExtResource("24_jjqjp")
region = Rect2(552, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqvmu"]
atlas = ExtResource("24_jjqjp")
region = Rect2(736, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyrbj"]
atlas = ExtResource("24_jjqjp")
region = Rect2(920, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqghg"]
atlas = ExtResource("24_jjqjp")
region = Rect2(1104, 0, 184, 137)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmk7i"]
atlas = ExtResource("24_jjqjp")
region = Rect2(1288, 0, 184, 137)

[sub_resource type="SpriteFrames" id="SpriteFrames_16dms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oucyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pfy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf677")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctvfa")
}],
"loop": false,
"name": &"Attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw8se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1r2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx35y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g1px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttut2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6bfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pq8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whmfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh6bs")
}],
"loop": false,
"name": &"Death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eardg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qsgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij3pi")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr1xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7m3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4a0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjf25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5weq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwas3")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ihu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6q4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqvmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyrbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqghg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmk7i")
}],
"loop": false,
"name": &"Run",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sfoa5"]
atlas = ExtResource("22_4wbwh")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdos0"]
atlas = ExtResource("22_4wbwh")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4yg5"]
atlas = ExtResource("22_4wbwh")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce2c8"]
atlas = ExtResource("22_4wbwh")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1wwy"]
atlas = ExtResource("22_4wbwh")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dvmw"]
atlas = ExtResource("22_4wbwh")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_14vdb"]
atlas = ExtResource("22_4wbwh")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_smlam"]
atlas = ExtResource("22_4wbwh")
region = Rect2(784, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrdw4"]
atlas = ExtResource("22_4wbwh")
region = Rect2(896, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_47qit"]
atlas = ExtResource("22_4wbwh")
region = Rect2(1008, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjnfl"]
atlas = ExtResource("22_4wbwh")
region = Rect2(1120, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_145la"]
atlas = ExtResource("22_4wbwh")
region = Rect2(1232, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ntu"]
atlas = ExtResource("22_4wbwh")
region = Rect2(1344, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfi3t"]
atlas = ExtResource("23_qv7a5")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmonm"]
atlas = ExtResource("23_qv7a5")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvjsg"]
atlas = ExtResource("23_qv7a5")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1ugn"]
atlas = ExtResource("24_rw4tf")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_egps7"]
atlas = ExtResource("24_rw4tf")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xd5r"]
atlas = ExtResource("24_rw4tf")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cer56"]
atlas = ExtResource("24_rw4tf")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew6hb"]
atlas = ExtResource("24_rw4tf")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5kbt"]
atlas = ExtResource("24_rw4tf")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag8n1"]
atlas = ExtResource("28_1h656")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_elli2"]
atlas = ExtResource("28_1h656")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcwxx"]
atlas = ExtResource("28_1h656")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6p16"]
atlas = ExtResource("28_1h656")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqdgr"]
atlas = ExtResource("28_1h656")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_peqg7"]
atlas = ExtResource("28_1h656")
region = Rect2(560, 0, 112, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_jjqjp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfoa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdos0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4yg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce2c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1wwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dvmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14vdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smlam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrdw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47qit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjnfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_145la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ntu")
}],
"loop": false,
"name": &"Attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfi3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmonm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvjsg")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1ugn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egps7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xd5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cer56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew6hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5kbt")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag8n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elli2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcwxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6p16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqdgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peqg7")
}],
"loop": false,
"name": &"Run",
"speed": 20.0
}]

[node name="exp_tutorial" type="Node2D"]
script = ExtResource("1_pr8p3")

[node name="Stage_BG" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -12.975
anchor_top = -23.375
anchor_right = -12.975
anchor_bottom = -23.375
offset_right = 1080.0
offset_bottom = 1912.0
texture = ExtResource("2_pnqj1")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Stage1_3BG" type="TextureRect" parent="."]
offset_right = 1080.0
offset_bottom = 776.0
texture = ExtResource("3_r28i6")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 64.0
offset_top = 128.0
offset_right = 4635.0
offset_bottom = 1208.0
scale = Vector2(0.21, 0.15)
texture = ExtResource("4_uaeq4")
metadata/_edit_lock_ = true

[node name="ProblemLabel" type="Label" parent="."]
offset_left = 104.0
offset_top = 152.0
offset_right = 976.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 432.0
offset_top = 648.0
offset_right = 1499.0
offset_bottom = 1395.0
scale = Vector2(0.21, 0.15)
texture = ExtResource("4_uaeq4")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="AnswerLabel" type="Label" parent="."]
offset_left = 432.0
offset_top = 648.0
offset_right = 664.0
offset_bottom = 764.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="numpad_bg" type="TextureRect" parent="."]
offset_top = 776.0
offset_right = 1080.0
offset_bottom = 1912.0
texture = ExtResource("5_3o53u")

[node name="Number_Button" type="VBoxContainer" parent="."]
offset_left = 221.58
offset_top = 932.78
offset_right = 853.58
offset_bottom = 1774.78
scale = Vector2(0.935, 0.935)

[node name="num_row_123" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="one" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
icon = ExtResource("5_r28i6")
flat = true
icon_alignment = 1

[node name="two" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("6_3o53u")
flat = true
icon_alignment = 1

[node name="three" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("7_16dms")
flat = true
icon_alignment = 1

[node name="num_row_456" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="four" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("8_jjqjp")
flat = true
icon_alignment = 1

[node name="five" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("9_1h656")
flat = true
icon_alignment = 1

[node name="six" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("10_2g6yp")
flat = true
icon_alignment = 1

[node name="num_row_789" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="seven" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("11_ulwgd")
flat = true
icon_alignment = 1

[node name="eight" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("12_42r2d")
flat = true
icon_alignment = 1

[node name="nine" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("13_7jfug")
flat = true
icon_alignment = 1

[node name="num_row_0_clear_bckspace" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2
size_flags_horizontal = 4

[node name="clear" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("14_xiwxr")
flat = true
icon_alignment = 1

[node name="zero" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("15_t8f48")
flat = true
alignment = 0
icon_alignment = 1

[node name="back" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("16_cwhjg")
flat = true
icon_alignment = 1

[node name="Placeholder_BackButton" type="Button" parent="."]
offset_left = 20.895
offset_top = 1762.67
offset_right = 352.895
offset_bottom = 2093.67
scale = Vector2(0.4, 0.4)
icon = ExtResource("17_0rtjy")
flat = true
icon_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 888.0
offset_top = 56.0
offset_right = 1022.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 50

[node name="SDisLabel" type="Label" parent="."]
offset_left = 888.0
offset_top = 8.0
offset_right = 1026.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 40
text = "SCORE:"

[node name="Submit" type="Button" parent="."]
offset_left = 822.0
offset_top = 925.485
offset_right = 1047.0
offset_bottom = 1131.48
theme_override_font_sizes/font_size = 100
text = "
"
icon = ExtResource("18_yaa4h")
flat = true
icon_alignment = 1

[node name="HPLabel" type="Label" parent="."]
offset_left = 72.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 20

[node name="HPDisLabel" type="Label" parent="."]
offset_left = 64.0
offset_right = 217.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "HEALTH"

[node name="TimerLabel" type="Label" parent="."]
offset_left = 512.0
offset_top = 48.0
offset_right = 569.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 50

[node name="TDisLabel" type="Label" parent="."]
offset_left = 496.0
offset_right = 590.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "TIME"

[node name="Enemy2" type="AnimatedSprite2D" parent="."]
position = Vector2(864, 568)
scale = Vector2(3.03261, 2.87774)
sprite_frames = SubResource("SpriteFrames_16dms")
animation = &"Idle"
flip_h = true

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(240, 568)
scale = Vector2(3.97076, 3.41458)
sprite_frames = SubResource("SpriteFrames_jjqjp")
animation = &"Idle"
